package.json update

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"//3": "updating this file will download and update your packages",
 	"name": "my-hyperdev-app",
 	"version": "0.0.1",
-	"description": "What am I about?",
+	"description": "metricImperialConverter",
 	"main": "server.js",
 	"scripts": {
 		"start": "nodemon server.js",
