package.json update 2

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"description": "metricImperialConverter",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js",
+		"start": "node server.js",
 		"test": "node ./node_modules/mocha/bin/mocha"
 	},
 	"dependencies": {
