--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
 		"chai": "^3.5.0",
 		"chai-http": "^4.3.0",
 		"cors": "^2.8.1",
-		"express": "^4.14.0",
-		"helmet": "^3.1.0",
+		"express": "^4.17.1",
+		"express-validator": "^6.1.1",
+		"helmet": "^3.19.0",
 		"mathjs": "^5.10.3",
+		"mocha": "^6.1.4",
 		"mongodb": "^2.2.16",
 		"zombie": "^6.1.4"
 	},
@@ -36,7 +38,6 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"mocha": "^6.1.4",
-		"nodemon": "^1.19.0"
+		"nodemon": "^1.19.1"
 	}
 }
